<resources>
    <string name="app_name">Velociraptor</string>

    <!--Generic-->
    <string name="configure">Configure</string>
    <string name="enable">Enable</string>
    <string name="done">Done</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="dismiss">Dismiss</string>
    <string name="kmph">%s km/h</string>
    <string name="mph">%s mph</string>
    <string name="percent">%s%%</string>
    <string name="grant">Grant</string>

    <string name="notif_content">Touch to open settings</string>
    <string name="notif_title">Velociraptor is running</string>

    <!--Permission Settings-->
    <string name="open_settings_page">Open settings page</string>
    <string name="enable_floating_desc">Allow Velociraptor to display over map apps</string>
    <string name="dialog_draw_overlay">To show floating elements on Android 6.0+, grant the \"Draw Over Other Apps\" permission</string>
    <string name="open_settings_failed_overlay">Unable to open settings. Please manually enable the \"Draw Over Other Apps\" setting for Velociraptor.</string>

    <string name="enable_accessibility_service">Turn on Accessibility Service</string>
    <string name="enable_accessibility_service_desc">Allow Velociraptor to launch automatically in map apps</string>
    <string name="enable_accessibility_service_desc2">Mainly intended for users with disabilities</string>
    <string name="accessibility_service_summary">Auto-launch in map apps</string>
    <string name="accessibility_service_description">Allow Velociraptor to detect the foreground app and launch automatically.\n\nVelociraptor does not use any information other than the foreground app info. This service is mainly intended for users with disabilities.</string>
    <string name="open_settings_failed_accessibility">Unable to open settings. Please manually enable the Accessibility Service setting for Velociraptor.</string>

    <string name="grant_permission">Grant permission</string>
    <string name="enable_location_desc">Allow Velociraptor to access your location</string>

    <string name="permissions_warning">Velociraptor doesn\'t have location permissions. Please open the app to grant them.</string>
    <string name="location_settings_warning">GPS is not turned on. Please enable for Velociraptor\'s speed limit monitor.</string>
    <string name="network_warning">Network is not connected. Velociraptor requires Internet connectivity to fetch the speed limit.</string>

    <!--General Settings-->
    <string name="general">General</string>

    <string name="show_limits">Speed limits</string>
    <string name="show_speedometer">Speedometer</string>

    <string name="sound_alert">Sound alert</string>
    <string name="test">Test</string>

    <string name="speed_unit">Speed units</string>

    <string name="style">Style</string>
    <string name="united_states">United States</string>
    <string name="international">International</string>

    <string name="size">Size</string>
    <string name="size_limit_overview">Speed Limit: %s</string>
    <string name="size_speedometer_overview">Speedometer: %s</string>

    <string name="transparency">Opacity</string>

    <string name="speeding_amount">Speeding tolerance</string>
    <string name="tolerance_dialog_text">Warn when speed limit exceeded by:</string>
    <string name="plus">plus</string>
    <string name="or">or</string>
    <string name="tolerance_desc">%1$s %2$s %3$s</string>

    <string name="tip_tap_hide">Tip: Tap the sign to temporarily hide it!</string>

    <!--About Dialog-->
    <string name="about">About</string>
    <string name="about_dialog_title">Velociraptor v%s</string>
    <string name="about_body"><![CDATA[
        <b>Velociraptor</b> is a floating speed limit monitor with speedometer and warning features.
        <br/><br/>

        Developed by <b>Daniel Ciao</b><br/>

        <a href="http://pluscubed.com">Website</a>&nbsp;&nbsp;
        <a href="mailto:pluscubed@gmail.com">Email</a>&nbsp;&nbsp;
        <a href="https://twitter.com/plusCubed">Twitter</a>&nbsp;&nbsp;
        <a href="https://google.com/+DanielCiao">Google+</a>&nbsp;&nbsp;
        <a href="https://github.com/pluscubed">GitHub</a>&nbsp;&nbsp;
        <a href="https://www.linkedin.com/in/dciao">LinkedIn</a><br/><br/>

        <a href="https://play.google.com/store/apps/details?id=com.pluscubed.velociraptor">Rate on the Play Store!</a><br/><br/>

        <a href="https://github.com/pluscubed/velociraptor">GitHub</a> - source, issues, feature requests<br/>
        <a href="http://pluscubed.oneskyapp.com/collaboration/project/64120">OneSky</a> - translate the app to your language<br/>
        <a href="https://play.google.com/apps/testing/com.pluscubed.velociraptor">Beta testing</a> - try out upcoming releases

        <br/><br/>
        <i>
        This app uses Accessibility services. These services are intended for users with disabilities.<br/><br/>

        By using Velociraptor, you absolve the developer, speed limit providers, and all other parties of any responsibility
        for accidents, legal consequences, and all other outcomes. The data presented by Velociraptor, including speed limits and current speed,
        is not guaranteed to be accurate. This app is not affiliated or endorsed by OpenStreetMap, HERE, TomTom, or Sygic. All trademarks
        belong to their respective owners.<br/><br/>

        Please pay attention to the road and use with care.
       </i>
    ]]></string>
    <string name="licenses">Licenses</string>

    <string name="terms_body"><![CDATA[
       By using Velociraptor, you absolve the developer, speed limit providers, and all other parties of any responsibility
       for accidents, legal consequences, and all other outcomes. The data presented by Velociraptor, including speed limits and current speed,
       is not guaranteed to be accurate. All trademarks belong to their respective owners.<br/><br/>

       Please pay attention to the road and use with care.
     ]]></string>

    <string name="accept">Accept</string>
    <string name="terms_warning">Open Velociraptor to accept the terms of use</string>

    <!--Speed limit providers-->
    <string name="speed_limit_providers">Speed limit providers</string>

    <string name="subscribe_placeholder">Subscribe (7-day free trial)</string>

    <string name="here_provider">HERE Maps</string>
    <string name="here_provider_short">HERE</string>
    <string name="here_desc">Subscribe for %s (7-day free trial)</string>

    <string name="tomtom_provider">TomTom Maps</string>
    <string name="tomtom_provider_short">TomTom</string>
    <string name="tomtom_desc">Subscribe for %s (7-day free trial)</string>

    <string name="openstreetmap">OpenStreetMap</string>
    <string name="openstreetmap_short">OSM</string>
    <string name="share_link">Share Link</string>
    <string name="openstreetmap_desc">Free - Velociraptor\'s OSM server is supported by you</string>
    <string name="osm_edit">Visit <DEBUG>openstreetmap.org</DEBUG> on your computer to add/edit speed limits</string>
    <string name="open_link_failed">Unable to open link. Please manually go to %s.</string>

    <string name="edit_data">Edit Data</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="coverage">Coverage</string>

    <string name="check_coverage">Check OpenStreetMap coverage</string>


    <!--Activation Settings-->
    <string name="select_overlay_usage">Activation</string>

    <string name="automatically_show">Show/hide in specified apps</string>
    <string name="show_in_apps">Auto-launch in these apps</string>

    <string name="persistent_notification_controls">Show notification controls</string>
    <string name="controls_notif_title">Velociraptor controls</string>
    <string name="controls_notif_desc">Show or hide the speed limit monitor</string>

    <string name="gmaps_only_nav">Google Maps: Only when navigating</string>
    <string name="gmaps_only_nav_notif_access">To use this feature, Velociraptor needs Notification Access to check when Google Maps navigation is open</string>
    <string name="gmaps_only_nav_jellybean">Only available for Android 4.3+</string>
    <string name="open_settings_failed_notif_access">Unable to open settings. Please manually enable the \"Notification access\" setting for Velociraptor.</string>

    <!--App selection-->
    <string name="select_apps">Select apps</string>
    <string name="show_map_apps">Show map apps</string>


    <!---Advanced settings-->
    <string name="advanced">Advanced</string>
    <string name="debugging_stats">Stats for nerds/debugging</string>
    <string name="obtaining_gps_location">Obtaining GPS location…</string>


    <!--Changelog-->
    <string name="changelog">Changelog</string>
    <string name="rate">Rate</string>
    <string name="support">Support</string>


    <!--Support development-->
    <string name="support_development">Support development</string>
    <string name="in_app_unavailable">In-app billing not available</string>
    <string name="support_dev_dialog">Used for OpenStreetMap server costs; suggested amount is 1 USD per month.</string>
    <string name="support_dev_dialog_badge">Thank you for your support!</string>
    <string name="per_month">%s per month</string>
    <string name="one_time">%s one-time</string>

    <!--Notification Channels-->
    <string name="channel_toggles">Show/hide toggles</string>
    <string name="channel_warnings">Warnings</string>

</resources>
