<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="-4dp"
    android:layout_marginRight="-4dp"
    android:layout_marginTop="-6dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="0dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/select_overlay_usage"
            android:textColor="?colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_auto_display"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@null"
            android:foreground="?selectableItemBackground"
            android:paddingEnd="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="12dp"
            android:paddingStart="16dp"
            android:text="@string/automatically_show"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linear_auto_display_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/enable_accessibility_service_desc"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/button_enable_service"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:text="@string/enable" />

                <ImageView
                    android:id="@+id/image_service_enabled"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_done_green_40dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_app_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/select_apps"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/button_app_selection"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configure" />

            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@null"
            android:foreground="?selectableItemBackground"
            android:paddingEnd="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="12dp"
            android:paddingStart="16dp"
            android:text="@string/persistent_notification_controls"
            android:textSize="16sp" />

        <Space
            android:id="@+id/service_enabled_space"
            android:layout_width="match_parent"
            android:layout_height="8dp" />
    </LinearLayout>
</android.support.v7.widget.CardView>