<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="23dp"
    tools:background="#fff">

    <LinearLayout
        android:id="@+id/card_m_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!--Draw Over Other Apps-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/image_floating_enabled"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@null"
                tools:src="@drawable/ic_cross_red_40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_floating_desc"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_floating_enabled"
            style="@style/Widget.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/open_settings_page" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!--Access location-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/image_location_enabled"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@null"
                tools:src="@drawable/ic_cross_red_40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_location_desc"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_location_enabled"
            style="@style/Widget.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/grant_permission" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

    </LinearLayout>

    <!--Accessibility Service-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_service_enabled"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@null"
            tools:src="@drawable/ic_cross_red_40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_accessibility_service_desc"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_enable_service"
        style="@style/Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/enable_accessibility_service" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:tint="#8a000000"
            app:srcCompat="@drawable/ic_lightbulb_outline_black_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/troubleshoot_label"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/button_troubleshoot"
            style="@style/Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troubleshoot" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/shadow_cards" />

</LinearLayout>